manifest/istio-default/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: choshsh-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-80
        protocol: HTTP
      hosts:
        - "www.choshsh.com"
        - "argocd.choshsh.com"
        - "grafana.choshsh.com"
        - "jenkins.choshsh.com"
        - "jaeger.choshsh.com"
      tls:
        httpsRedirect: true
    - port:
        name: https-443
        number: 443
        protocol: HTTP
      hosts:
        - "www.choshsh.com"
        - "argocd.choshsh.com"
        - "grafana.choshsh.com"
        - "jenkins.choshsh.com"
        - "jaeger.choshsh.com"
